# ai_agent_master_class

./: #9.7-9.9  .gitignore  12.0-12.7  Assignment3.py  README.md  app.py  assignment3.py  assignment4  assignment5  discord_post.txt  graph.py  llm_factory.py  main.py  requirements.txt  state.py  subscriptions.yaml  tools.py
#9.4-9.6/: app.py
.devcontainer/: devcontainer.json
5주차/: HOW I AI SCREENER - 제출본.md  education_agent_start.ipynb
5주차/: agents.py  graph.py  llm_factory.py  main.py  state.py  subscriptions.yaml  tools.py  ui.py
5주차/.devcontainer/: devcontainer.json
5주차/nodes/: __init__.py  both_collector.py  curator.py  delivery.py  evaluator.py  intake.py  news_searcher.py  newsletter_writer.py  quiz_generator.py  subscription_loader.py  trend_detector.py  youtube_collector.py
6주차/: .env.example  .gitignore  README.md  graph.py  llm_factory.py  main.py  pyproject.toml  requirements.txt  state.py  tools.py  ui.py
6주차/.devcontainer/: devcontainer.json
6주차/nodes/: delivery.py  news_searcher.py  newsletter_writer.py  youtube_collector.py
assignment1/: main.ipynb  pyproject.toml
assignment2_#2.3/: main.ipynb  pyproject.toml
nodes/: curator.py  intake.py  news_searcher.py  youtube_collector.py
