[project]
name = "newshub-agent"
version = "1.0.0"
description = "LangGraph 기반 유튜브 구독 관리 + 멀티소스 뉴스 큐레이션 에이전트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.6",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]
